[tool.poetry]
name = "ateam-electrical"
version = "0.1.0"
description = "PCBs, Spice Models, Supporting Analysis Scripts for SSL A-Team"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
eseries = "^1.2.1"
uliengineering = {git = "https://github.com/ulikoehler/UliEngineering.git"}
wireviz = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
